<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/task_title_hint"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/add_task_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_task_title"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableRight="@drawable/ic_date_range_accent_24dp"
            android:focusable="false"
            android:gravity="top"
            android:hint="@string/due_date_hint" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/add_task_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_task_due_date"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="top" />

        <EditText
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_task_priority"
            android:gravity="top"
            android:hint="@string/task_description_hint"
            android:inputType="textMultiLine" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_edit_task_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:layout_anchor="@id/contentFrame" />

    </RelativeLayout>
</ScrollView>

